--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Mascot =
+= Mascot
 
 A simple library for reading file Mascot formats (from Matrix Science, Inc.)
 Please see http://matrixscience.com/help for more details on the Mascot search
@@ -6,12 +6,12 @@ engine and the Mascot formats.
 
 See below for usage details.
 
-== Mascot::Entry ==
+== Mascot::Entry
 
 A simple spectra object that represents a MSMS spectra.
 
 
-== MGF Format ==
+== MGF Format 
 
 The Mascot::MGF object represents a file of MSMS spectra. See http://www.matrixscience.com/help/data_file_help.html#GEN for more
 information on this file format.
@@ -25,14 +25,15 @@ mgf = Mascot::MGF.open("some/file/path.mgf")
 
 entry = mgf.next()
 entry.title # read only for entry attrs, utilizing method_missing. Returns nil for undef attrs
-
-</pre>
-
 mgf.each do |entry|
   # do something with entry...
 end
 
 mgf[10].title # return the TITLE of the 11th entry in the file.
+
+
+</pre>
+
 
 == DAT Format ==
 
@@ -50,4 +51,4 @@ The Mascot result format. This is a work in progress (meaning I have not started
 
 == Copyright ==
 
-Copyright (c) 2010 Angel Pizarro. See LICENSE for details.
+Copyright (c) 2011 Angel Pizarro. See LICENSE for details.
