--- a/README.rdoc
+++ b/README.rdoc
@@ -10,36 +10,29 @@ See below for usage details.
 
 A simple spectra object that represents a MSMS spectra.
 
-
 == MGF Format 
 
 The Mascot::MGF object represents a file of MSMS spectra. See http://www.matrixscience.com/help/data_file_help.html#GEN for more
 information on this file format.
 
 Usage:
-<pre>
+    require 'mascot/mgf'
 
-require 'mascot/mgf'
+    mgf = Mascot::MGF.open("some/file/path.mgf")
 
-mgf = Mascot::MGF.open("some/file/path.mgf")
+    entry = mgf.next()
+    entry.title # read only for entry attrs, utilizing method_missing. Returns nil for undef attrs
+    mgf.each do |entry|
+      # do something with entry...
+    end
 
-entry = mgf.next()
-entry.title # read only for entry attrs, utilizing method_missing. Returns nil for undef attrs
-mgf.each do |entry|
-  # do something with entry...
-end
+    mgf[10].title # return the TITLE of the 11th entry in the file.
 
-mgf[10].title # return the TITLE of the 11th entry in the file.
-
-
-</pre>
-
-
-== DAT Format ==
+== DAT Format
 
 The Mascot result format. This is a work in progress (meaning I have not started on it :P ). For now, just use the ms-mascot gem from John Prince.
 
-== Note on Patches/Pull Requests ==
+== Note on Patches/Pull Requests
 
 * Fork the project.
 * Make your feature addition or bug fix.
@@ -49,6 +42,6 @@ The Mascot result format. This is a work in progress (meaning I have not started
   (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
-== Copyright ==
+== Copyright
 
 Copyright (c) 2011 Angel Pizarro. See LICENSE for details.
