--- a/README.rdoc
+++ b/README.rdoc
@@ -1,38 +1,25 @@
 = Mascot
 
-A simple library for reading file Mascot formats (from Matrix Science, Inc.)
+A container package for Mascot formats (from Matrix Science, Inc.)
 Please see http://matrixscience.com/help for more details on the Mascot search
 engine and the Mascot formats.
 
-See below for usage details.
+The relavent packages that are install as dependencies are 
 
-== Mascot::Entry
+[+mascot-mgf+] Parser for the Mascot Generic Format (MGF) for spectra
+[+mascot-dat+] Parser for Mascot's result DAT format
+[+mascot-dad+] Parser for a SQLite3 version of DAT files (custom). Requires DataMapper 
 
-A simple spectra object that represents a MSMS spectra.
+= DISCLAIMER
 
-== MGF Format 
+I have no affiliation with Matrix Science, Inc. other than as a user of  their Mascot proteomics search engine. 
 
-The Mascot::MGF object represents a file of MSMS spectra. See http://www.matrixscience.com/help/data_file_help.html#GEN for more
-information on this file format.
+This is open source software and by using it you agree to the LICENSE restrictions, specifically that the packages are "AS-IS" and may or may not work for your use case(s).
 
-Usage:
-    require 'mascot/mgf'
-
-    mgf = Mascot::MGF.open("some/file/path.mgf")
-
-    entry = mgf.next()
-    entry.title # read only for entry attrs, utilizing method_missing. Returns nil for undef attrs
-    mgf.each do |entry|
-      # do something with entry...
-    end
-
-    mgf[10].title # return the TITLE of the 11th entry in the file.
-
-== DAT Format
-
-The Mascot result format. This is a work in progress (meaning I have not started on it :P ). For now, just use the ms-mascot gem from John Prince.
-
+= Development
 == Note on Patches/Pull Requests
+
+This being an open source project, feel free to extend it to your needs. I would appreciate any feedback or improvements though. To contribute your code back to the project
 
 * Fork the project.
 * Make your feature addition or bug fix.
